fixing social bottons z-index

--- a/components/SocialShareButtons/index.module.css
+++ b/components/SocialShareButtons/index.module.css
@@ -5,7 +5,7 @@
 
   bottom: 0;
 
-  z-index: 100;
+  z-index: 500;
   gap: 2px;
   flex-direction: row;
 }
