--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -35,7 +35,7 @@
 .main h1 {
   text-transform: capitalize;
 
-  margin-top: 0.5em;
+  margin-top: 1em;
 }
 .main h2 {
   margin: 1em 0 0.5rem;
